# energysim

./: .env.example  .gitignore  README.md  pyproject.toml
src/energysim/: __init__.py  __main__.py  chart.py  cli.py  config.py  dynamic_pricing.py  export.py  ha_client.py  prices.py  prices_cli.py  pricing.py  prompts.py  simulate.py  simulate_cli.py  sources.py  strategies.py  timeutil.py  transform.py
tests/: test_dynamic_pricing.py  test_simulate.py  test_strategies.py
