[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "energysim"
version = "0.1.0"
description = "Download hourly energy data from Home Assistant for offline analysis (battery simulation, cost calculations)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12",
    "pandas>=2.1",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "pulp>=2.7,<4",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
energysim = "energysim.cli:main"
batterysim = "energysim.simulate_cli:main"
energyprices = "energysim.prices_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
